--- a/main_website/main_app/templates/base.html
+++ b/main_website/main_app/templates/base.html
@@ -18,6 +18,10 @@
             text-align: center;
             display: block;
         }
+		
+		.close_button {
+			outline: none !important;
+		}
 		{% block style %}
 		{% endblock %}
     </style>
@@ -30,20 +34,20 @@
                 <a class="navbar-brand" href="/">
                     JAK Website
                 </a>
-				<form method='get' action="/search/" class="form-inline">
+				<form method='get' action="/search/" class="form-inline search__form">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse mx-2" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         {% block navbarlink %}
 						{% endblock %}
                     </ul>
                 </div>
-				<div>
+				<div class="signupAndLogin_Buttons">
 					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
 					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
 				</div>
@@ -54,123 +58,90 @@
 				  <span aria-hidden="true">&times;</span>
 				</button>
             </div>
- 
-			<!-- Login Model Starts -->
-				<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							
-							<div class="modal-header">
-								<h5 class="modal-title" id="loginModal">Login using your Credentials</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-
-							<div class="modal-body">
-								<form action="/profile/login" method='post'><input type="hidden" name="csrfmiddlewaretoken" value="a4TOLdBxhLmpgkiG21vNJ1QwMU4SVaFkcvIIIHA1AX6JApcxh4GFkzAoFk5PsgcJ">
-									<div class="form-group">
-										<label for="lusername">Username</label>
-										<input type="name" class="form-control" id="luname" placeholder="Enter your username"
-											name="uname">
-									</div>
-									<div class="form-group">
-										<label for="password">Password</label>
-										<input type="password" class="form-control" id="lpassword" placeholder="Enter your password"
-											name="password">
-									</div>
-									<div class="g-recaptcha" data-sitekey="6LfHr-QZAAAAAE1TWFmznDAg6GsWsyLjljBqU702"></div>
-									<input type="hidden" name="path" value="/">
-									<button type="submit" class="btn btn-danger mt-2" id="loginsubmit">Login</button>
-								</form>
-							</div>
-
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			<!-- Login Model Ends -->
-
-			<!-- SignUp Model Starts -->
-				<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModal" aria-hidden="true">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="signupModal">SignUp for an account</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-							<div class="modal-body">
-								<form name="contact" method="post" action="/profile/signup"><input type="hidden" name="csrfmiddlewaretoken" value="a4TOLdBxhLmpgkiG21vNJ1QwMU4SVaFkcvIIIHA1AX6JApcxh4GFkzAoFk5PsgcJ">
-									<div class="form-group">
-										<label for="uname">Username</label>
-										<input type="text" class="form-control" id="uname" placeholder="Enter your Name" name="uname">
-										<small id="unamehelp" class="form-text text-muted px-1">
-										  Your unique username must be less than 10 characters (only lowecase letters, numbers & underscores
-										  allowed) with no spaces
-										</small>
-									</div>
-									<div class="form-group">
-										<label for="name">First Name</label>
-										<input type="text" class="form-control" id="fname" placeholder="Enter your First Name" name="fname">
-									</div>
-									<div class="form-group">
-										<label for="name">Last Name</label>
-										<input type="text" class="form-control" id="lname" placeholder="Enter your Last Name" name="lname">
-									</div>
-									<div class="form-group">
-										<label for="email">Your Email</label>
-										<div class="mx-0">
-											<div class="col-md-8 px-0">
-												<input type="email" class="form-control" id="email" placeholder="Enter your Email" name="email">
-												<small id="otpMessage" class="form-text"></small>
-											</div>
-											<div class="col-md-4 my-1 px-0">
-												<button class="btn btn-danger btn-sm mt-2" id="otpbtn">Send OTP</button>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label for="otp">Enter OTP</label>
-										<input type="text" class="form-control" id="otp" placeholder="Enter OTP" name="otp">
-									</div>
-									<div class="form-group">
-										<label for="password">Choose a password</label>
-										<input type="password" class="form-control" id="password" placeholder="Choose a password" name="password">
-									</div>
-									<div class="form-group">
-										<label for="password2">Retype a password</label>
-										<input type="password" class="form-control" id="password2" placeholder="Retype your password" name="password2">
-									</div>
-									<div class="g-recaptcha" data-sitekey="6LfHr-QZAAAAAE1TWFmznDAg6GsWsyLjljBqU702"></div>
-									<input type="hidden" name="path" value="/">
-									<button type="submit" class="btn btn-danger mt-2">SignUp</button>
-								</form>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-							</div>
-						</div>
-				  </div>
-				</div>
-			<!-- SignUp Model Ends -->
         </div>
     </div>
+	
+	<!-- SignUp Modal -->
+	<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModal" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="signupModalTitle">Sign Up</h5>
+					<button type="button" class="close close_button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label for="signUpUsername">Username</label>
+							<input type="text" class="form-control" id="signUpUsername" name="signUpUsername" placeholder="Choose a Unique Username...">
+						</div>
+						<div class="form-group">
+							<label for="fname">First Name</label>
+							<input type="text" class="form-control" id="fname" name="fname" placeholder="Your First Name...">
+						</div>
+						<div class="form-group">
+							<label for="lname">Last Name</label>
+							<input type="text" class="form-control" id="lname" name="lname" placeholder="Your Last Name...">
+						</div>
+						<div class="form-group">
+							<label for="email">Email Address</label>
+							<input type="email" class="form-control" id="email" name="email" placeholder="Your Email Address...">
+						</div>
+						<div class="form-group">
+							<label for="signUpPass1">Choose a Password</label>
+							<input type="password" class="form-control" id="signUpPass1" name="signUpPass1" placeholder="Choose a Password...">
+						</div>
+						<div class="form-group">
+							<label for="signUpPass2">Confirm Password</label>
+							<input type="password" class="form-control" id="signUpPass2" name="signUpPass2" placeholder="Enter your Password again...">
+						</div>
+						<button type="button" class="btn btn-primary">Submit</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Login Modal -->
+	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModal" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="loginModalTitle">Login</h5>
+					<button type="button" class="close close_button" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label for="loginUsername">Username</label>
+							<input type="text" class="form-control" id="loginUsername" name="loginUsername" placeholder="Enter your Username...">
+						</div>
+						<div class="form-group">
+							<label for="loginPass1">Enter Password</label>
+							<input type="password" class="form-control" id="loginPass1" name="loginPass1" placeholder="Enter your Password...">
+						</div>
+						<button type="button" class="btn btn-primary">Submit</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
     {% block body %}
 	{% endblock %}
     <footer class="footer">
-		<p class="mb-0 text-center">&copy; 2020 jonakadiptakalita.com</p>
+		<p class="mb-0 text-center">&copy; 2021 jonakadiptakalita.com</p>
 	</footer>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<script>
-		console.log('working');
+		console.log('Hello!!');
 		{% block script %}
 		{% endblock %}
 	</script>
