--- a/main_website/main_app/templates/404Error.html
+++ b/main_website/main_app/templates/404Error.html
@@ -1,5 +1,5 @@
 	{% extends 'base.html' %}
-	{% block title %} Contact Me {% endblock %}
+	{% block title %} 404 {% endblock %}
 	{% block navbarlink %}
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
@@ -13,4 +13,20 @@
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
     </li>
+	{% endblock %}
+	{% block body %}
+		<div>
+            <center>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<br/>
+				<h1 class="title">
+					Page Not Found!!
+				</h5>
+			</center>
+		</div>
 	{% endblock %}
