--- a/main_website/main_app/templates/base.html
+++ b/main_website/main_app/templates/base.html
@@ -56,7 +56,7 @@
 				{% for message in messages %}
 					<div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
 						<strong>Message: </strong> {{ message }}
-						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<button type="button" class="close close_button" data-dismiss="alert" aria-label="Close">
 						  <span aria-hidden="true">&times;</span>
 						</button>
 					</div>
@@ -64,7 +64,7 @@
 			{% else %}
 				<div class="alert alert-success alert-dismissible fade show" role="alert">
 					<strong>Welcome to my Website!! </strong>
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<button type="button" class="close close_button" data-dismiss="alert" aria-label="Close">
 					  <span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -127,16 +127,17 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form action="/login/" method='post'>
+						{% csrf_token %}
 						<div class="form-group">
 							<label for="loginUsername">Username</label>
 							<input type="text" required class="form-control" id="loginUsername" name="loginUsername" placeholder="Enter your Username...">
 						</div>
 						<div class="form-group">
-							<label for="loginPass1">Enter Password</label>
-							<input type="password" required class="form-control" id="loginPass1" name="loginPass1" placeholder="Enter your Password...">
+							<label for="loginPass">Enter Password</label>
+							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password...">
 						</div>
-						<button type="button" class="btn btn-primary">Submit</button>
+						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 				</div>
 			</div>
