--- a/main_website/main_app/templates/base.html
+++ b/main_website/main_app/templates/base.html
@@ -22,6 +22,10 @@
 		.close_button {
 			outline: none !important;
 		}
+		
+		.give__margin_pls {
+			margin-right: 8px;
+		}
 		{% block style %}
 		{% endblock %}
     </style>
@@ -35,21 +39,36 @@
                     JAK Website
                 </a>
 				<form method='get' action="/search/" class="form-inline search__form">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse mx-2" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        {% block navbarlink %}
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse mx-2" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						{% block navbarlink %}
 						{% endblock %}
-                    </ul>
-                </div>
-				<div class="signupAndLogin_Buttons">
-					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
-					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
+					</ul>
+				</div>
+				<div class="ml-auto form-inline">
+					{% if user.is_authenticated %}
+						<ul class="navbar-nav">
+							<li class="nav-item dropdown give__margin_pls">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Welcome {{request.user}}
+								</a>
+								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="/logout/">Logout</a>
+								</div>
+							</li>
+						</ul>
+					{% else %}
+						<div class="signupAndLogin_Buttons">
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">Login</button>
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#signupModal">SignUp</button>
+						</div>
+					{% endif %}
 				</div>
             </nav>
 			{% if messages %}
