Added Fuctionality to Contact through the Contact Page!!

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -45,7 +45,7 @@
 					<ul class="navbar-nav">
 						{% block navbarlink %}
 						{% endblock %}
-						<form method='get' action="/search/" class="form-inline search__form mx-3">
+						<form method='get' action="/search/" class="form-inline my-2 my-lg-0 mr-3 search__form mx-3">
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
 							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 						</form>
@@ -82,7 +82,7 @@
 				{% endfor %}
 			{% else %}
 				<div class="alert alert-success alert-dismissible fade show" role="alert">
-					<strong>Welcome to my Website!! </strong>
+					<strong>Welcome to my Website!!</strong>
 					<button type="button" class="close close_button" data-dismiss="alert" aria-label="Close">
 					  <span aria-hidden="true">&times;</span>
 					</button>
@@ -168,7 +168,6 @@
     <footer class="footer">
 		<p class="mb-0 text-center">&copy; 2021 jonakadiptakalita.com</p>
 	</footer>
-	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
