--- a/main_app/templates/contact_me.html
+++ b/main_app/templates/contact_me.html
@@ -12,33 +12,32 @@
     </li>
 	{% endblock %}
 	{% block body %}
-    <div class="container">
-            <form action="/" method='post'>
-				<input type="hidden" name="csrfmiddlewaretoken" value="URUEJWogLBBjsjxjV8Fn5cLf8PmQfQ63GSqpyrIfdUFZqFmd0iB4BI2RfJDqGJFT">
-                <div class="form-group">
-                    <label for="name">Your Name</label>
-                    <input type="name" class="form-control" id="name" placeholder="Enter your Name" name="name">
-                </div>
-                <div class="form-group">
-                    <label for="email">Your Email</label>
-                    <input type="email" class="form-control" id="cemail" placeholder="Enter your Email" name="email">
-                </div>
-                <div class="form-group">
-                    <label for="phone">Your Phone Number (with country code)</label>
-                    <input type="text" class="form-control" id="phone" placeholder="Enter your Phone Number" name="phone">
-                </div>
-                <div class="form-group">
-                    <label for="description">Describe why do you want to contact me, here</label>
-                    <textarea type="text" class="form-control" id="message" placeholder="Your message" name="message" style="margin-top: 0px; margin-bottom: 0px; height: 174px;"></textarea>
-                </div>
-				<div class="g-recaptcha" data-sitekey="6LfHr-QZAAAAAE1TWFmznDAg6GsWsyLjljBqU702"></div>
-				<br/>
-				{% csrf_token %}
-                <button type="submit" class="btn btn-primary">
-					Submit
-				</button>
-            </form>
-			<br/>
-			<br/>
+	<div class="main-container container-fluid my-4">
+		<div class="row">
+			<div class="col-lg-6 offset-lg-2">
+                <h3>Contact Me!!</h3>
+                <form action="/contact_me/" method='post'>
+					{% csrf_token %}
+					<div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="name" required class="form-control" id="name" placeholder="Enter your Name" name="name" />
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" required class="form-control" id="email" placeholder="Enter your Email" name="email" />
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Your Phone Number (with country code)</label>
+                        <input type="tel" required class="form-control" id="phone" placeholder="Enter your Phone Number" name="phone" />
+                    </div>
+                    <div class="form-group">
+                        <label for="desc">Describe what you want to contact me for here!!</label>
+                        <textarea type="text" required class="form-control" id="desc" placeholder="Your message" name="desc"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-danger mt-2">Submit</button>
+                </form>
+            
+			</div>
+		</div>
 	</div>
 	{% endblock %}
