--- a/main_app/templates/my_own.html
+++ b/main_app/templates/my_own.html
@@ -15,24 +15,23 @@
         </li>
 	{% endblock %}
 	{% block body %}
-	{% load static %}
-    <div class="container">
-		<div class="row">
-		
-			<!--
-			{% for i in games_own %}
-			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-				<img src="{{ i.image }}" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">
-						{{ i.game_name }}
-					</h5>
-					<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
-				</div>
-			</div> 
-			{% endfor %}
-			-->
-			
+	{% if games_own %}
+		<div class="container">
+			<div class="row">
+				{% for i in games_own %}
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<img src="{{ i.image }}" class="card-img-top" alt="...">
+						<div class="card-body">
+							<h5 class="card-title">
+								{{ i.game_name }}
+							</h5>
+							<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+						</div>
+					</div> 
+				{% endfor %}
 		</div>
 	</div>
+	{% else %}
+		<center><h1>Nothing...</h1></center>
+	{% endif %}
 	{% endblock %}
