Updated Folder Structure

--- a/templates/search.html
+++ b/templates/search.html
@@ -15,8 +15,17 @@
     </li>
 	{% endblock %}
 	{% block body %}
-    <div class="container-fluid">
-        
-		<br/>
+    <div class="container">
+        <div class="row">
+			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center"></h5>
+                    <p class="card-text text-center">
+                        
+                    </p>
+                    <a href="" class="btn btn-primary d-block">Read More>></a>
+                </div>
+            </div>
+		</div>
     </div>
 	{% endblock %}
