--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
 					<ul class="navbar-nav">
 						{% block navbarlink %}
 						{% endblock %}
-						<form method='get' action="/search/" class="form-inline my-2 my-lg-0 mr-3 search__form mx-3">
-							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+						<form method='get' action="/search/" class="form-inline search__form mx-3">
+							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="search">
 							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 						</form>
 						<div class="ml-auto form-inline">
