--- a/templates/search.html
+++ b/templates/search.html
@@ -16,16 +16,27 @@
 	{% endblock %}
 	{% block body %}
     <div class="container">
-        <div class="row">
-			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title text-center"></h5>
-                    <p class="card-text text-center">
-                        
-                    </p>
-                    <a href="" class="btn btn-primary d-block">Read More>></a>
-                </div>
-            </div>
+		<div class="row">
+			{% for i in GamesFav %}
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title">
+							{{ i.game_name }}
+						</h5>
+						<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+					</div>
+				</div>
+			{% endfor %}
+			{% for i in GamesOwn %}
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title">
+							{{ i.game_name }}
+						</h5>
+						<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+					</div>
+				</div>
+			{% endfor %}
 		</div>
-    </div>
+	</div>
 	{% endblock %}
