Completed Search Functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 						{% block navbarlink %}
 						{% endblock %}
 						<form method='get' action="/search/" class="form-inline search__form mx-3">
-							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="search">
+							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
 							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 						</form>
 						<div class="ml-auto form-inline">
