--- a/templates/search.html
+++ b/templates/search.html
@@ -15,28 +15,32 @@
     </li>
 	{% endblock %}
 	{% block body %}
-    <div class="container">
-		<div class="row">
-			{% for i in GamesFav %}
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-					<div class="card-body">
-						<h5 class="card-title">
-							{{ i.game_name }}
-						</h5>
-						<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+	{% if GamesFav or GamesOwn %}
+		<div class="container">
+			<div class="row">
+				{% for i in GamesFav %}
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title">
+								{{ i.game_name }}
+							</h5>
+							<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+						</div>
 					</div>
-				</div>
-			{% endfor %}
-			{% for i in GamesOwn %}
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-					<div class="card-body">
-						<h5 class="card-title">
-							{{ i.game_name }}
-						</h5>
-						<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+				{% endfor %}
+				{% for i in GamesOwn %}
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title">
+								{{ i.game_name }}
+							</h5>
+							<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+						</div>
 					</div>
-				</div>
-			{% endfor %}
+				{% endfor %}
+			</div>
 		</div>
-	</div>
+	{% else %}
+		<center><h1>Nothing...</h1></center>
+	{% endif %}
 	{% endblock %}
