added announcement about my API

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -35,6 +35,15 @@
 						<a href="https://chat.whatsapp.com/EOOq07ixKsBeiOOyrCyZH" class="btn btn-primary d-block">LINK</a>
 					</div>
 				</div>
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title text-center">My API</h5>
+						<p class="card-text text-center">
+							Checkout my Own API!!
+						</p>
+						<a href="http://jak-api-dot-com.herokuapp.com/" class="btn btn-primary d-block">LINK</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	{% endblock %}
