Added Google ReCaptcha

--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,8 @@
 							<label for="signUpPass2">Confirm Password</label>
 							<input type="password" required class="form-control" id="signUpPass2" name="signUpPass2" placeholder="Enter your Password again...">
 						</div>
+						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+						<br />
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 				</div>
@@ -158,6 +160,8 @@
 							<label for="loginPass">Enter Password</label>
 							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password...">
 						</div>
+						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+						<br />
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
 				</div>
@@ -170,6 +174,7 @@
     <footer class="footer">
 		<p class="mb-0 text-center">&copy; 2021 jonakadiptakalita.com</p>
 	</footer>
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
