--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -15,5 +15,22 @@
 </li>
 {% endblock %}
 {% block body %}
-<center><h3>Still in Progress</h3></center>
+<br />
+<div class="container">
+	<h3>Your Profile</h3>
+	<form>
+		<div class="form-group">
+			<label for="my_accountName">Your Name</label>
+			<input type="text" class="form-control" id="my_accountName" value="{{user.first_name}}" aria-describedby="nameHelp" placeholder="Enter your Name">
+		</div>
+		<div class="form-group">
+			<label for="my_accountUsername">Your Username</label>
+			<input type="text" class="form-control" id="my_accountUsername" value="{{user.username}}" aria-describedby="usernameHelp" placeholder="Enter your Username">
+		</div>
+		<div class="form-group">
+			<label for="my_accountEmail1">Your Email</label>
+			<input type="email" class="form-control" id="my_accountEmail1" value="{{user.email}}" aria-describedby="emailHelp" placeholder="Enter your Email">
+		</div>
+	</form>
+</div>
 {% endblock %}
