--- a/templates/search.html
+++ b/templates/search.html
@@ -23,6 +23,7 @@
 			<div class="row">
 				{% for i in GamesFav %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<img src="/media/{{i.image}}" class="padded card-img-top" alt="game_img">
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
@@ -33,6 +34,7 @@
 				{% endfor %}
 				{% for i in GamesOwn %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<img src="/media/{{i.image}}" class="padded card-img-top" alt="game_img">
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
