--- a/templates/search.html
+++ b/templates/search.html
@@ -18,7 +18,7 @@
 	<div class="container my-3">
 		<h3>Search Results:</h3>
 	</div>
-	{% if GamesFav or GamesOwn %}
+	{% if GamesFav or GamesOwn or MyPhotos %}
 		<div class="container">
 			<div class="row">
 				{% for i in GamesFav %}
@@ -40,6 +40,16 @@
 								{{ i.game_name }}
 							</h5>
 							<a href="{{ i.game_link }}" class="btn btn-primary">Play</a>
+						</div>
+					</div>
+				{% endfor %}
+				{% for i in MyPhotos %}
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<img src="/media/{{i.image}}" class="card-img-top" alt="image"/>
+						<div class="card-body">
+							<h5 class="card-title">
+								{{i.name}}
+							</h5>
 						</div>
 					</div>
 				{% endfor %}
