--- a/templates/games.html
+++ b/templates/games.html
@@ -28,7 +28,7 @@
             </div>
             <div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title text-center">My Favs.</h5>
+                    <h5 class="card-title text-center">My Favs</h5>
                     <p class="card-text text-center">
                         Here you'll find my fav games.
                     </p>
