thinking about making the 'forgot password?' thing!!

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,10 @@
 		.give__margin_pls {
 			margin-right: 8px;
 		}
+		
+		.forgot_password_link {
+			text-align: right;
+		}
 		{% block style %}
 		{% endblock %}
     </style>
@@ -161,6 +165,8 @@
 							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password...">
 						</div>
 						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+						<a href="#" class="forgot_password_link">Forgot Password?</a>
+						<br />
 						<br />
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
