--- a/templates/about.html
+++ b/templates/about.html
@@ -31,12 +31,11 @@
                 My name is JONAK ADIPTA KALITA. I am a student in Kendriya Vidyalaya Mangaldoi, I am 
 				currently studying in standard '7th'. My mom is a Banker and my Dad is a Mathematics 
 				Teacher. I am a Coder and also a 'Home Game Developer'. I code for fun but sometimes
-                I also teach some of my colleagues some 'Python'. I am a master in Python and JavaScript.
-				I do have a crush but no one knows about it. I am a Youtuber too. I love to play Games 
-				such as NFS, COD, AC, Among Us, GTA, etc. I am a huge fan of Anime and watched 'Pokemon',
-				'One_Piece', 'Beyblade', 'DBG'. If you want to get to my Instagram, Github, Reddit you 
-				have to find it by yourself. Actually you'll find my Social Medias in the Social 
-				Media Page.
+                I also teach some of my colleagues some 'Python'. I love Python and JavaScript the most.
+				I am a Youtuber too. I love to play Games such as NFS, COD, AC, Among Us, GTA, etc. I 
+				am a huge fan of Anime and watched 'Pokemon', 'One_Piece', 'Beyblade', 'DBG'. If you 
+				want to get to my Instagram, Github, Reddit you have to find it by yourself. Actually 
+				you'll find my Social Medias in the Social Media Page.
             </p>
             <center>
                 <p>
