--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav">
-						<form method='get' action="/search/" class="form-inline search__form">
+						<form method='get' action="/search/" class="form-inline search__form mx-3">
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
 							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 						</form>
