--- a/templates/404Error.html
+++ b/templates/404Error.html
@@ -1,5 +1,5 @@
 	{% extends 'base.html' %}
-	{% block title %} 404 {% endblock %}
+	{% block title %} 404 - Page Not Found {% endblock %}
 	{% block navbarlink %}
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
