--- a/templates/404Error.html
+++ b/templates/404Error.html
@@ -25,7 +25,7 @@
 				<br/>
 				<br/>
 				<h1 class="title">
-					Page Not Found!!
+					404 - Page Not Found!!
 				</h5>
 			</center>
 		</div>
