--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 					<ul class="navbar-nav">
 						{% block navbarlink %}
 						{% endblock %}
-						<form method='get' action="/search/" class="form-inline search__form">
+						<form method='get' action="/search/" class="form-inline mx-3 search__form">
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
 							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 						</form>
