--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
 		.forgot_password_link {
 			text-align: right;
 		}
+		
 		{% block style %}
 		{% endblock %}
     </style>
@@ -37,8 +38,8 @@
 </head>
 
 <body>
-    <div className="home">
-        <div className="home__header">
+    <div class="main_body">
+        <div class="header fixed-top">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="/">
                     JAK Website
@@ -172,7 +173,12 @@
 			</div>
 		</div>
 	</div>
-
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
     {% block body %}
 	{% endblock %}
     <footer class="footer">
