update the typed js text and size

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,10 +59,10 @@
 	{% block script %}
 	window.onload = function () {
         var typed = new Typed('#typed', {
-            strings: ["Welcome to my Website!!", "Contact Me!!", "Learn Coding!!"],
-            backSpeed: 15,
+            strings: ["I'm a Coder", "I'm a Student", "I'm an Assamese", "I'm a Designer", "I'm a Gamer", "I'm a Sushi Lover", ],
+            backSpeed: 30,
             smartBackspace: true,
-            backDelay: 1200,
+            backDelay: 1500,
             startDelay: 1000,
             typeSpeed: 25,
             loop: true,
