--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 											Welcome {{request.user}}
 										</a>
 										<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-											<a class="dropdown-item" href="/my_account/">My Profile</a>
+											<a class="dropdown-item" href="/my_profile/my_account/">My Profile</a>
 											<a class="dropdown-item" href="/logout/">Logout</a>
 										</div>
 									</li>
