changed the class of the update button of password change form, from danger to sucess

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -47,7 +47,7 @@
 					<input required type="password" class="form-control" id="changepass_newpassconfirm"  name="changepass_newpassconfirm" placeholder="Confirm New Password">
 				 </div>
 			</div>
-			<button type="submit" class="btn btn-danger">Update</button>
+			<button type="submit" class="btn btn-primary">Update</button>
 		</form>
 		<br />
 		<br />
