changed the class of the submit button of the contact page, from danger to primary

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -35,7 +35,7 @@
                         <textarea type="text" required class="form-control" id="desc" placeholder="Your message" name="desc"></textarea>
                     </div>
 					<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
-                    <button type="submit" class="btn btn-danger mt-2">Submit</button>
+                    <button type="submit" class="btn btn-primary mt-2">Submit</button>
                 </form>
 			</div>
 		</div>
