changed the link for the instagram in social media page

--- a/templates/social_media.html
+++ b/templates/social_media.html
@@ -53,7 +53,7 @@
                     <p class="card-text text-center">
                         Follow me in Instagram!!
                     </p>
-                    <a href="https://www.instagram.com/jonakadiptakalita_2596/" class="btn btn-primary d-block">Go to My Instagram</a>
+                    <a href="https://www.instagram.com/xxjonakadiptaxx/" class="btn btn-primary d-block">Go to My Instagram</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
