--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,18 @@
 			margin-right: 8px;
 		}
 		
+		body::-webkit-scrollbar {
+			width: 0 !important;
+		}
+		
+		body {
+			overflow: -moz-scrollbars-none;
+		}
+		
+		body {
+			-ms-overflow-style: none;
+		}
+		
 		{% block style %}
 		{% endblock %}
     </style>
