--- a/templates/home.html
+++ b/templates/home.html
@@ -45,7 +45,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">My Anouncements</h5>
                         <p class="card-text text-center">
-                            Here you'll all find the Announcements.
+                            Here you'll find the Announcements.
                         </p>
                         <a href="anouncements/" class="btn btn-primary d-block">Go to Anouncements</a>
                     </div>
