--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,10 @@
 			-ms-overflow-style: none;
 		}
 		
+		.notification-bell {
+			position: absolute;
+		}
+		
 		{% block style %}
 		{% endblock %}
     </style>
