--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 						{% block navbarlink %}
 						{% endblock %}
 					</ul>
-					<form method='get' action="/search/" class="form-inline my-2 my-lg-0 mr-3">
+					<form method='get' action="/search" class="form-inline my-2 my-lg-0 mr-3">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query" />
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 					</form>
