--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 	{% extends 'base.html' %}
+	{% load static %}
 	{% block title %} About {% endblock %}
 	{% block navbarlink %}
     <li class="nav-item font-weight-bold">
@@ -11,10 +12,8 @@
         <a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
     </li>
 	{% endblock %}
-	{% block style %}
-		.main_text {
-			font-size: 20px !important;
-		}
+	{% block head %}
+	<link rel="stylesheet" href="{% static 'styles/about.css' %}">
 	{% endblock %}
 	{% block body %}
         <center>
