--- a/templates/base.html
+++ b/templates/base.html
@@ -1,51 +1,14 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 	<link rel="icon" type="image/png" href="https://avatars0.githubusercontent.com/u/70377522?s=60&v=4">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<link rel="stylesheet" href="{% static 'styles/base.css' %}">
     <title>JAK Website | {% block title%} {% endblock %}</title>
-    <style>
-        .footer {
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: black;
-            color: white;
-            text-align: center;
-            display: block;
-        }
-		
-		.close_button {
-			outline: none !important;
-		}
-		
-		.give__margin_pls {
-			margin-right: 8px;
-		}
-		
-		body::-webkit-scrollbar {
-			width: 0 !important;
-		}
-		
-		body {
-			overflow: -moz-scrollbars-none;
-		}
-		
-		body {
-			-ms-overflow-style: none;
-		}
-		
-		.notification-bell {
-			position: absolute;
-		}
-		
-		{% block style %}
-		{% endblock %}
-    </style>
 	{% block head %} {% endblock %}
 </head>
 
@@ -197,15 +160,11 @@
 			</div>
 		</div>
 	</div>
+	<script src="{% static 'scripts/base.js' %}"></script>
 	<script src="https://kit.fontawesome.com/58a72d19b5.js" crossorigin="anonymous"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-	<script>
-		console.log('Hello!!');
-		{% block script %}
-		{% endblock %}
-	</script>
 </body>
 
 </html>
