completed privacy permission

--- a/templates/my_photos.html
+++ b/templates/my_photos.html
@@ -47,7 +47,7 @@
 				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title text-center">You don't have Permission</h5>
-                        <a href="grant_permission" class="btn btn-primary d-block">Grant Permission</a>
+                        <a href="grant_permission/" class="btn btn-primary d-block">Grant Permission</a>
                     </div>
                 </div>
 			{% endif %}
