--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -45,6 +45,15 @@
 							<a href="http://jak-api-dot-com.herokuapp.com/" class="btn btn-primary d-block">LINK</a>
 						</div>
 					</div>
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title text-center">My Discord Bot</h5>
+							<p class="card-text text-center">
+								Invite my Discord Bot to your Discord Server!!
+							</p>
+							<a href="https://discord.com/oauth2/authorize?client_id=756402881913028689&scope=bot" class="btn btn-primary d-block">INVITE</a>
+						</div>
+					</div>
 				</div>
 			{% else %}
 				<center><h5>You need to Login or SignUp</h5></center>
