added some more announcements!!

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -54,6 +54,15 @@
 							<a href="https://discord.com/oauth2/authorize?client_id=756402881913028689&scope=bot" class="btn btn-primary d-block">INVITE</a>
 						</div>
 					</div>
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title text-center">My Discord Template</h5>
+							<p class="card-text text-center">
+								Use my Discord Template to Create your Server!!
+							</p>
+							<a href="https://discord.new/3xd7Cj7um9Az" class="btn btn-primary d-block">LINK</a>
+						</div>
+					</div>
 				</div>
 			{% else %}
 				<center><h5>You need to Login or SignUp</h5></center>
