--- a/templates/PokeGocode.html
+++ b/templates/PokeGocode.html
@@ -13,6 +13,9 @@
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
     </li>
+	<li class="nav-item font-weight-bold">
+        <a class="nav-link" href="/discord_widget/">Discord Widget<span class="sr-only">(current)</span></a>
+    </li>
 	{% endblock %}
 	{% block body %}
 		<div>
