--- a/templates/about.html
+++ b/templates/about.html
@@ -11,6 +11,9 @@
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
     </li>
+	<li class="nav-item font-weight-bold">
+        <a class="nav-link" href="/discord_widget/">Discord Widget<span class="sr-only">(current)</span></a>
+    </li>
 	{% endblock %}
 	{% block head %}
 	<link rel="stylesheet" href="{% static 'styles/about.css' %}">
