--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -10,6 +10,9 @@
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/social_media/">Social Media<span class="sr-only">(current)</span></a>
     </li>
+	<li class="nav-item font-weight-bold">
+        <a class="nav-link" href="/discord_widget/">Discord Widget<span class="sr-only">(current)</span></a>
+    </li>
 	{% endblock %}
 	{% block body %}
 	<div class="main-container container-fluid my-4">
