--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,9 @@
     <li class="nav-item font-weight-bold">
         <a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
     </li>
+	<li class="nav-item font-weight-bold">
+        <a class="nav-link" href="/discord_widget/">Discord Widget<span class="sr-only">(current)</span></a>
+    </li>
 	{% endblock %}
 	{% block head %}
 	<link rel="stylesheet" href="{% static 'styles/home.css' %}">
@@ -48,7 +51,7 @@
                         <a href="anouncements/" class="btn btn-primary d-block">Go to Anouncements</a>
                     </div>
                 </div>
-            </div>
+			</div>
         </div>
 		<br/>
     </div>
