--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
 							<label for="signUpPass2">Confirm Password</label>
 							<input type="password" required class="form-control" id="signUpPass2" name="signUpPass2" placeholder="Enter your Password again..." />
 						</div>
-						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+						<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
 						<br />
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
@@ -152,7 +152,7 @@
 							<label for="loginPass">Enter Password</label>
 							<input type="password" required class="form-control" id="loginPass" name="loginPass" placeholder="Enter your Password..." />
 						</div>
-						<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+						<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
 						<br />
 						<button type="submit" class="btn btn-primary">Submit</button>
 					</form>
