--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -37,7 +37,7 @@
                         <label for="desc">Describe what you want to contact me for here!!</label>
                         <textarea type="text" required class="form-control" id="desc" placeholder="Your Message  (MAX: 500 Keywords)" name="desc"></textarea>
                     </div>
-					<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+					<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
                     <button type="submit" class="btn btn-primary mt-2">Submit</button>
                 </form>
 			</div>
