--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -52,7 +52,7 @@
 				<label for="changepass_newpassconfirm">Confirm New Password</label>
 				<input required type="password" class="form-control" id="changepass_newpassconfirm"  name="changepass_newpassconfirm" placeholder="Confirm New Password" />
 			</div>
-			<div class="g-recaptcha" data-sitekey="6LdC8KAaAAAAALZ2keQ9F4S5gnXwC9xXRG3rxQjT"></div>
+			<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
 			<br />
 			<button type="submit" class="btn btn-primary">Update</button>
 		</form>
